--- a/notes/23.12.30-year-in-review.md
+++ b/notes/23.12.30-year-in-review.md
@@ -4,6 +4,11 @@
 
 - [Top 10 list on letterboxd](https://letterboxd.com/lemonmade/list/my-favorites-of-2023/)
 
+## Podcasts
+
+- Maintenance phase
+- Rocket
+
 ## Software Development
 
 ### Interesting topics (no LLMs!)
