Add favorite series of 2023

--- a/notes/23.12.30-year-in-review.md
+++ b/notes/23.12.30-year-in-review.md
@@ -4,6 +4,16 @@
 
 - [Top 10 list on letterboxd](https://letterboxd.com/lemonmade/list/my-favorites-of-2023/)
 
+## Shows
+
+Top 5 series I watched in 2023:
+
+- [The Last of Us, Season 1](https://www.imdb.com/title/tt3581920)
+- [Ted Lasso](https://www.imdb.com/title/tt10986410)
+- [Andor](https://www.imdb.com/title/tt9253284)
+- [Shoresy](https://www.imdb.com/title/tt18249282)
+- [Foundation](https://www.imdb.com/title/tt0804484)
+
 ## Podcasts
 
 - Maintenance phase
