Add links and favorite music

--- a/notes/23.12.30-year-in-review.md
+++ b/notes/23.12.30-year-in-review.md
@@ -9,10 +9,14 @@
 Top 5 series I watched in 2023:
 
 - [The Last of Us, Season 1](https://www.imdb.com/title/tt3581920)
-- [Ted Lasso](https://www.imdb.com/title/tt10986410)
-- [Andor](https://www.imdb.com/title/tt9253284)
-- [Shoresy](https://www.imdb.com/title/tt18249282)
-- [Foundation](https://www.imdb.com/title/tt0804484)
+- [Ted Lasso, Season 3](https://www.imdb.com/title/tt10986410)
+- [Andor, Season 1](https://www.imdb.com/title/tt9253284)
+- [Shoresy, Seasons 1–2](https://www.imdb.com/title/tt18249282)
+- [Foundation, Season 2](https://www.imdb.com/title/tt0804484)
+
+## Music
+
+- [Favorites of 2023 playlist on Apple Music](https://music.apple.com/ca/playlist/favorites-of-2023/pl.u-r2yBJrEtjgly52)
 
 ## Podcasts
 
